Closed Bug 1711971 Opened 3 years ago Closed 3 years ago

Connection coalescing is not working for HTTP3

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
91 Branch
Tracking Status
firefox91 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

References

(Blocks 1 open bug)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

Since we are using nsUDPSocket for http3, DnsAndConnectSocket::OnTransportStatus will never be called.
This means the mCoalescingKeys of http3 connection entry is always empty and makes connection coalescing broken for http3.

Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/691e058869d7
Make connection coalescing works for http3, r=necko-reviewers,dragana
Regressions: 1715011
Regressions: 1715013
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: