Bug 1711971 - Make connection coalescing works for http3, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D115528